--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,46 @@
    <!-- Icofont -->
    <link rel="stylesheet" href="assets/plugins/icofont/icofont.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+<style>
+       .owl-carousel.owl-loaded {
+        margin: 1rem auto 0 !important;
+      }
+
+      .owl-carousel .owl-nav .owl-prev,
+      .owl-carousel .owl-nav .owl-next {
+        background: #fff !important;
+        width: 45px !important;
+        height: 45px !important;
+        border-radius: 50% !important;
+        border: 1px solid rgba(0, 0, 0, 0.808) !important;
+      }
+      .owl-carousel .owl-nav .owl-next img,
+      .owl-carousel .owl-nav .owl-prev img {
+        width: 25px !important;
+      }
+     
+      .owl-carousel .owl-nav {
+        width: 100% !important;
+      }
+      .owl-carousel .owl-nav .owl-next {
+        position: absolute !important;
+        top: 40% !important;
+        right: 0 !important;
+      }
+      .owl-carousel .owl-nav .owl-prev {
+        position: absolute !important;
+        top: 40% !important;
+        left: 0 !important;
+      }
+     
+      @media screen and (max-width: 991px) {
+        .owl-carousel .owl-nav {
+          margin: 0 !important;
+        }
+      }
+</style>
 </head>
 <body>
   <app-root></app-root>
